2020-07-15 Wiley E. Hill <wileyhill@gmail.com>

    * src/widgets/geda_action.c: Revise geda_action_sync_menu_visible to
      not initialize hide_if_empty and visible and assign values in else
      clause instead.

    * src/widgets/geda_combobox.c: Revise geda_combo_box_list_position to
      not initialize x and y and assign values in else clause instead.

2020-07-14 Wiley E. Hill <wileyhill@gmail.com>

    * src/widgets/geda_tearoff_menu_item.c: Utilize macros:

          * geda_get_widget_allocation
          * eda_get_widget_parent
          * geda_get_widget_style

2020-07-09 Wiley E. Hill <wileyhill@gmail.com>

    * src/widgets/geda_separator.c: Eliminate ancillary GtkWidget in
      geda_separator_instance_init. Add function documentation for:

          * geda_separator_class_init
          * geda_separator_instance_init

2020-07-08 Wiley E. Hill <wileyhill@gmail.com>

    * src/widgets/geda_combobox.c: Replace GTK_LIST_STORE dynamic cast
      with static cast.

    * src/widgets/geda_separator.c: Replace GTK_WIDGET dynamic cast with
      static cast. Add todo documentation templates. Utilize macros:

          * geda_get_widget_requisition
          * geda_get_widget_style

2020-07-07 Wiley E. Hill <wileyhill@gmail.com>

    * src/functions/geda_container.c: Validate pointer is a GtkContainer
      in geda_container_focus_sort.

    * src/widgets/geda_menu_item.c: Reorganize module; move _get_property
      before _set_property.

2020-07-06 Wiley E. Hill <wileyhill@gmail.com>

    * src/widgets/geda_menu_item.c: Add internal source documentation:

          * geda_menu_item_forall
          * geda_menu_item_get_property
          * geda_menu_item_set_property

2020-07-03 Wiley E. Hill <wileyhill@gmail.com>

    * src/widgets/geda_radio_menu_item.c: Update Free Software Foundation
      address.

2020-06-19 Wiley E. Hill <wileyhill@gmail.com>

    * src/widgets/geda_menu_bar.c: Rename viewable_menu_bars ->
      viewable_bars.
